--- a/about.html
+++ b/about.html
@@ -53,7 +53,9 @@
     </div>
     <div id="contact">
       <h2>📮 Contact me</h2>
-      <a href="mailto:bmyira@gamil.com" class="email-link">bmyira@gmail.com</a>
+      <a href="mailto:bmyira@gamil.com" class="email-link"
+        >nqubezelo12@gmail.com</a
+      >
     </div>
   </body>
 </html>
