--- a/contact.html
+++ b/contact.html
@@ -5,12 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <script
+      src="https://kit.fontawesome.com/cc209e6506.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="style/contact.css" />
   </head>
   <body>
     <a href="index.html" class="home-link">Back to homepage</a>
-    <h1>About me</h1>
-    <h3>Front-end developer from Cape Town, South Africa</h3>
+    <h1>Contact me</h1>
+    <h3>Singer/Actor & Dancer from Johannesburg, South Africa</h3>
     <div class="about-paragraphs">
       <p>
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam
