added new css for the buttons and cleaned up the rest the index page

--- a/contact.html
+++ b/contact.html
@@ -59,6 +59,7 @@
       <a href="mailto:bmyira@gamil.com" class="email-link"
         >nqubezelo12@gmail.com</a
       >
+      <i class="fa-brands fa-instagram"></i>
     </div>
   </body>
 </html>
