--- a/index.html
+++ b/index.html
@@ -27,48 +27,70 @@
     ></script>
     <link rel="stylesheet" href="style/root.css" />
   </head>
-  <body style="background-image: url('./images/cape-town.jpg')">
-    <div class="justify-contant-center align-items-center">
-      <div class="box">
-        <div class="overlay" id="overlay">
-          <div class="image">
-            <div class="trick"></div>
+  <body>
+    <div class="app-container">
+      <div
+        class="background-img justify-contant-center align-items-center"
+        style="background-image: url('./images/cape-town.jpg')"
+      >
+        <div class="justify-contant-center align-items-center">
+          <div class="box">
+            <div class="overlay" id="overlay">
+              <div class="image">
+                <div class="trick"></div>
+              </div>
+            </div>
           </div>
+
+          <div class="middle-contant">
+            <h1>Welcome to my Portfolio</h1>
+          </div>
+          <h3>🇿🇦 South African musician based in Europe</h3>
         </div>
       </div>
-      <div class="middle-contant">
-        <h1>Welcome to my Portfolio</h1>
-      </div>
-      <h3>🇿🇦 South African musician based in Europe</h3>
       <div class="info-links">
-        <a href="about.html" class="about-link">About Me</a>
-        <a href="contact.html" class="contact-link">Contact Me</a>
+        <a href="about.html" style="--clr: #1e9bff" class="about-link">
+          <span>About me</span> <i></i>
+        </a>
+        <a href="contact.html" style="--clr: #ff1867" class="contact-link">
+          <span>Contact Me</span> <i></i>
+        </a>
       </div>
-    </div>
-    <p>.</p>
-    <div class="wrap-gradient">
-      <div class="gradient">
-        <a href="#">LinkedIn</a>
+      <div class="paragraph d-none d-lg-block">
+        <p>.ddfggfhfhf</p>
       </div>
-      <div class="gradient-1">
-        <a href="#">X / Twitter</a>
+
+      <div class="wrap-gradient">
+        <div class="gradient">
+          <a href="#" class="fa-brands fa-linkedin text-decoration-none"></a>
+        </div>
+        <div class="gradient-1">
+          <a href="#" i class="fa-brands fa-x-twitter text-decoration-none"></a>
+        </div>
+        <div class="gradient-2">
+          <a href="" class="fa-brands fa-instagram text-decoration-none"></a>
+        </div>
+        <div class="gradient-3">
+          <a href="#" class="fa-brands fa-facebook text-decoration-none"></a>
+        </div>
+        <div class="gradient-4">
+          <a
+            href="#"
+            class="fa-brands fa-square-whatsapp text-decoration-none"
+          ></a>
+        </div>
+        <div class="gradient-5">
+          <a href="#" class="fa-solid fa-envelope text-decoration-none"></a>
+        </div>
       </div>
-      <div class="gradient-2">
-        <a href="#">Instagram</a>
-      </div>
-      <div class="gradient-3">
-        <a href="#">Facebook</a>
-      </div>
-      <div class="gradient-4">
-        <a href="#">Whatsapp</a>
-      </div>
-      <div class="gradient-5">
-        <a href="#">Email</a>
+      <div class="footer-description">
+        <footer>
+          since: 2024 coded by
+          <a href="mailto:bmyira@gmail.com" class="footer-link"
+            >Bathembu Myira</a
+          >
+        </footer>
       </div>
     </div>
   </body>
 </html>
-<footer>
-  @ since 2024 coded by
-  <a href="mailto:bmyira@gmail.com" class="footer-link">Bathembu Myira</a>
-</footer>
