--- a/about.html
+++ b/about.html
@@ -5,6 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
+      integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N"
+      crossorigin="anonymous"
+    />
     <script
       src="https://kit.fontawesome.com/cc209e6506.js"
       crossorigin="anonymous"
@@ -12,49 +18,40 @@
     <link rel="stylesheet" href="style/about.css" />
   </head>
   <body>
-    <a href="index.html" class="home-link">Back to homepage</a>
+    <a href="index.html" style="--clr: #6eff3e" class="home-link">
+      <span>Back to homepage</span><i></i
+    ></a>
     <h1>About me</h1>
     <h3>Singer/Actor & Dancer from Johannesburg, South Africa</h3>
     <div class="about-paragraphs">
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam
-        aperiam provident tempora? Cumque adipisci, non dolorem quia, odit qui
-        alias veniam excepturi rem dolor fugit dignissimos, sed voluptatum
-        blanditiis harum. Lorem ipsum dolor sit amet, consectetur adipisicing
-        elit. Numquam aperiam provident tempora? Cumque adipisci, non dolorem
-        quia, odit qui alias veniam excepturi rem dolor fugit dignissimos, sed
-        voluptatum blanditiis harum.
-        <br />
-        <br />r Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-        Numquam aperiam provident tempora? Cumque adipisci, non dolorem quia,
-        odit qui alias veniam excepturi rem dolor fugit dignissimos, sed
-        voluptatum blanditiis harum. Lorem ipsum dolor sit amet, consectetur
-        adipisicing elit. Numquam aperiam provident tempora? Cumque adipisci,
-        non dolorem quia, odit qui alias veniam excepturi rem dolor fugit
-        dignissimos, sed voluptatum blanditiis harum.
-      </p>
+      <div class="row">
+        <div class="col-6 bg-light">
+          <img src="images/Mdu3x.jpg" alt="" class="img-fluid m-5" />
+        </div>
 
-      <p class="paragraph-2">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam
-        aperiam provident tempora? Cumque adipisci, non dolorem quia, odit qui
-        alias veniam excepturi rem dolor fugit dignissimos, sed voluptatum
-        blanditiis harum. Lorem ipsum dolor sit amet, consectetur adipisicing
-        elit. Numquam aperiam provident tempora? Cumque adipisci, non dolorem
-        quia, odit qui alias veniam excepturi rem dolor fugit dignissimos, sed
-        voluptatum blanditiis harum.
-        <br />
-        <br />
-
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam
-        aperiam provident tempora? Cumque adipisci, non dolorem quia, odit qui
-        alias veniam excepturi rem dolor fugit dignissimos, sed voluptatum
-        blanditiis harum. Lorem ipsum dolor sit amet, consectetur adipisicing
-        elit. Numquam aperiam provident tempora? Cumque adipisci, non dolorem
-        quia, odit qui alias veniam excepturi rem dolor fugit dignissimos, sed
-        voluptatum blanditiis harum.
-      </p>
+        <div class="col-6">
+          <p class="paragraph-2 text-black-50">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam
+            aperiam provident tempora? Cumque adipisci, non dolorem quia, odit
+            qui alias veniam excepturi rem dolor fugit dignissimos, sed
+            voluptatum blanditiis harum. Lorem ipsum dolor sit amet, consectetur
+            adipisicing elit. Numquam aperiam provident tempora? Cumque
+            adipisci, non dolorem quia, odit qui alias veniam excepturi rem
+            dolor fugit dignissimos, sed voluptatum blanditii
+            <br />
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam
+            aperiam provident tempora? Cumque adipisci, non dolorem quia, odit
+            qui alias veniam excepturi rem dolor fugit dignissimos, sed
+            voluptatum blanditiis harum. Lorem ipsum dolor sit amet, consectetur
+            adipisicing elit. Numquam aperiam provident tempora? Cumque
+            adipisci, non dolorem quia, odit qui alias veniam excepturi rem
+            dolor fugit dignissimos, sed voluptatum blanditiis harum.
+          </p>
+        </div>
+      </div>
     </div>
-    <div id="contact">
+
+    <div class="contact">
       <h2>📮 Contact me</h2>
       <a href="mailto:bmyira@gamil.com" class="email-link"
         >nqubezelo12@gmail.com</a
