added images on about html page and css

--- a/about.html
+++ b/about.html
@@ -18,44 +18,53 @@
     <link rel="stylesheet" href="style/about.css" />
   </head>
   <body>
-    <a href="index.html" style="--clr: #6eff3e" class="home-link">
-      <span>Back to homepage</span><i></i
-    ></a>
-    <h1>About me</h1>
-    <h3>Singer/Actor & Dancer from Johannesburg, South Africa</h3>
-    <div class="about-paragraphs">
-      <div class="row">
-        <div class="col-6 bg-light">
-          <img src="images/Mdu3x.jpg" alt="" class="img-fluid m-5" />
-        </div>
+    <div class="about-container">
+      <a href="index.html" style="--clr: #6eff3e" class="home-link">
+        <span>Back to homepage</span><i></i
+      ></a>
+      <h1>About me</h1>
+      <h3>Singer/Actor & Dancer from Johannesburg, South Africa</h3>
 
-        <div class="col-6">
-          <p class="paragraph-2 text-black-50">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam
-            aperiam provident tempora? Cumque adipisci, non dolorem quia, odit
-            qui alias veniam excepturi rem dolor fugit dignissimos, sed
-            voluptatum blanditiis harum. Lorem ipsum dolor sit amet, consectetur
-            adipisicing elit. Numquam aperiam provident tempora? Cumque
-            adipisci, non dolorem quia, odit qui alias veniam excepturi rem
-            dolor fugit dignissimos, sed voluptatum blanditii
-            <br />
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam
-            aperiam provident tempora? Cumque adipisci, non dolorem quia, odit
-            qui alias veniam excepturi rem dolor fugit dignissimos, sed
-            voluptatum blanditiis harum. Lorem ipsum dolor sit amet, consectetur
-            adipisicing elit. Numquam aperiam provident tempora? Cumque
-            adipisci, non dolorem quia, odit qui alias veniam excepturi rem
-            dolor fugit dignissimos, sed voluptatum blanditiis harum.
-          </p>
+      <div class="paragraphs">
+        <div class="row">
+          <div class="col-6">
+            <img src="images/Mdu3x.jpg" class="img-fluid w-75 mdu-img1" />
+          </div>
+          <div class="col-6">
+            <p class="description-1">
+              here Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+              Numquam aperiam provident tempora? Cumque adipisci, non dolorem
+              quia, odit qui alias veniam excepturi rem dolor fugit dignissimos,
+              sed voluptatum blanditiis harum. Lorem ipsum dolor sit amet,
+              consectetur adipisicing elit. Numquam aperiam provident tempora?
+              Cumque adipisci, non dolorem quia, odit qui alias veniam excepturi
+              rem dolor fugit dignissimos, sed voluptatum blanditi.
+            </p>
+          </div>
+
+          <div class="col-6">
+            <p class="description-2">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam
+              aperiam provident tempora? Cumque adipisci, non dolorem quia, odit
+              qui alias veniam excepturi rem dolor fugit dignissimos, sed
+              voluptatum blanditiis harum. Lorem ipsum dolor sit amet,
+              consectetur adipisicing elit. Numquam aperiam provident tempora?
+              Cumque adipisci, non dolorem quia, odit qui alias veniam excepturi
+              rem dolor fugit dignissimos, sed voluptatum blanditi.
+            </p>
+          </div>
+          <div class="col-6">
+            <img src="images/mdu4x.jpg" class="img-fluid w-75 mdu-img2" />
+          </div>
         </div>
       </div>
-    </div>
 
-    <div class="contact">
-      <h2>📮 Contact me</h2>
-      <a href="mailto:bmyira@gamil.com" class="email-link"
-        >nqubezelo12@gmail.com</a
-      >
+      <div class="contact">
+        <h2>📮 Contact me</h2>
+        <a href="mailto:nqubezelo12@gmail.com" class="email-link"
+          >Mduduzi Nqubezelo</a
+        >
+      </div>
     </div>
   </body>
 </html>
