--- a/contact.html
+++ b/contact.html
@@ -56,10 +56,9 @@
     </div>
     <div id="contact">
       <h2>📮 Contact me</h2>
-      <a href="mailto:bmyira@gamil.com" class="email-link"
-        >nqubezelo12@gmail.com</a
+      <a href="mailto:nqubezelo12@gmail.com" class="email-link"
+        >Mduduzi Nqubezelo</a
       >
-      <i class="fa-brands fa-instagram"></i>
     </div>
   </body>
 </html>
