--- a/index.html
+++ b/index.html
@@ -62,16 +62,32 @@
 
       <div class="wrap-gradient">
         <div class="gradient">
-          <a href="#" class="fa-brands fa-linkedin text-decoration-none"></a>
+          <a
+            href="https://www.linkedin.com/in/wilson-mduduzi-nqubezelo-0496a2ab"
+            class="fa-brands fa-linkedin text-decoration-none"
+            target="_blank"
+          ></a>
         </div>
         <div class="gradient-1">
-          <a href="#" i class="fa-brands fa-x-twitter text-decoration-none"></a>
+          <a
+            href="https://open.spotify.com/artist/70xtvPj1drjALIMQH2N4Hb?si=QdmR4Y1BRfK5W5_K-JjLEA&fbclid=PAZXh0bgNhZW0CMTEAAabNAwsy816FKRvNSvHQfE_NRZeiAe03SRnp4VS6PTbUqn1OzUqvS4W5AYk_aem_xCX63ohjcTkz2HYYfvjzwA&nd=1&dlsi=41acd6dc4cdd4528"
+            class="fa-brands fa-spotify text-decoration-none"
+            target="_blank"
+          ></a>
         </div>
         <div class="gradient-2">
-          <a href="" class="fa-brands fa-instagram text-decoration-none"></a>
+          <a
+            href="https://www.instagram.com/qb_mdu/profile/?igsh=cmlwb2RxaDJianFj"
+            class="fa-brands fa-instagram text-decoration-none"
+            target="_blank"
+          ></a>
         </div>
         <div class="gradient-3">
-          <a href="#" class="fa-brands fa-facebook text-decoration-none"></a>
+          <a
+            href="https://music.apple.com/de/artist/mdu/413472409?|=en-GB"
+            class="fa-brands fa-apple text-decoration-none"
+            target="_blank"
+          ></a>
         </div>
         <div class="gradient-4">
           <a
@@ -80,7 +96,10 @@
           ></a>
         </div>
         <div class="gradient-5">
-          <a href="#" class="fa-solid fa-envelope text-decoration-none"></a>
+          <a
+            href="mailto:"
+            class="fa-solid fa-envelope text-decoration-none"
+          ></a>
         </div>
       </div>
       <div class="footer-description">
