added html with css animation in the about page

--- a/about.html
+++ b/about.html
@@ -31,15 +31,17 @@
             <img src="images/Mdu3x.jpg" class="img-fluid w-75 mdu-img1" />
           </div>
           <div class="col-6">
-            <p class="description-1">
-              here Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-              Numquam aperiam provident tempora? Cumque adipisci, non dolorem
-              quia, odit qui alias veniam excepturi rem dolor fugit dignissimos,
-              sed voluptatum blanditiis harum. Lorem ipsum dolor sit amet,
-              consectetur adipisicing elit. Numquam aperiam provident tempora?
-              Cumque adipisci, non dolorem quia, odit qui alias veniam excepturi
-              rem dolor fugit dignissimos, sed voluptatum blanditi.
-            </p>
+            <h4>
+              I am,
+              <div class="inner-heading">
+                <span>
+                  Mduduzi Nqubezelo <br />
+                  Proffesional Singer/Actor <br />
+                  & Dancer with 15 <br />
+                  years of experience <br />
+                </span>
+              </div>
+            </h4>
           </div>
 
           <div class="col-6">
